# arxiv2tex

./: .gitignore  README.md  README.zh.md  opencode.json  pyproject.toml
docs/: opencode-arxiv2tex.md
docs/guide/: agent-install.md
src/arxiv2tex/: __init__.py  arxiv.py  cli.py  matching.py  mcp.py  paths.py  query.py  service.py  storage.py  types.py
src/paper2tex/: __init__.py  arxiv.py  cache.py  cli.py  latex.py  mcp.py  query.py  types.py
tests/: test_latex.py  test_matching.py  test_mcp.py  test_query.py  test_service.py
