[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2tex"
version = "0.1.0"
description = "arXiv-first paper reader and TeX cache for coding agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Codex" }
]
dependencies = [
  "certifi>=2024.8.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
paper2tex = "paper2tex.cli:main"
paper2tex-mcp = "paper2tex.mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
